# DebugLogMessages

./: CMakeLists.txt  LogMessage.cpp  LogMessage.h  README.md  main.cpp
include/: global_includes.h
include/messaging/: log_message.h
include/timing/: timestamp.h
src/: main.cpp
src/messaging/: log_message.cpp
src/timing/: timestamp.cpp
